# src/controllers/notificationController.ts
@@ -3,7 +3,7 @@ import { NotificationService } from '../services/notificationService';
 
 const notificationService = new NotificationService();
 
-export const sendNotificationController = async (req: Request, res: Response) => {
+export const scheduleNotification = async (req: Request, res: Response) => {
   const { eventId, message, date } = req.body;
   try {
     console.log(eventId, message, date);
@@ -14,8 +14,7 @@ export const sendNotificationController = async (req: Request, res: Response) =>
   }
 };
 
-
-export const getNotificationLogsController = async (req: Request, res: Response) => {
+export const getNotificationLogs = async (req: Request, res: Response) => {
     const { eventId } = req.params;
     try {
       const logs = await notificationService.getLoggedNotifications(Number(eventId));
@@ -25,3 +24,14 @@ export const getNotificationLogsController = async (req: Request, res: Response)
     } 
 }
 
+
+
+export const getScheduledNotifications = async (req: Request, res: Response) => {
+  const { eventId } = req.params;
+  try {
+    const notifications = await notificationService.getScheduledNotifications(parseInt(eventId));
+    res.status(200).json(notifications);
+  } catch (error: any) {
+    res.status(400).json({ error: error.message });
+  }
+};
